feat: add login view

--- a/package.json
+++ b/package.json
@@ -1,54 +1,53 @@
 {
   "name": "clean-react",
   "version": "1.0.0",
-  "description": "",
-  "main": "./src/main/index.tsx",
+  "description": "NodeJs Rest API using TDD, Clean Architecture and Typescript",
+  "author": "Rodrigo Manguinho",
+  "license": "GNU GPL3",
   "scripts": {
-    "start": "webpack serve --open",
+    "start": "webpack-dev-server --open",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/faker": "^5.5.0",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@types/faker": "^4.1.11",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.2.0",
-    "eslint": "^7.23.0",
+    "css-loader": "^3.5.3",
+    "eslint": "^6.8.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "faker": "^5.5.2",
-    "git-commit-msg-linter": "^3.1.0",
-    "husky": "^6.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "faker": "^4.1.0",
+    "git-commit-msg-linter": "^2.4.2",
+    "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.1.0",
-    "typescript": "^4.2.3",
-    "webpack": "^5.30.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "jest": "^25.5.4",
+    "lint-staged": "^10.2.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "ts-jest": "^25.5.0",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "axios": "^0.19.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
