--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
     "check": "npm-check -u -s"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/react-router-dom": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "clean-webpack-plugin": "^3.0.0",
+    "coveralls": "^3.1.1",
     "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
