--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
+    "test:cypress": "cypress open",
     "check": "npm-check -u -s"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.9.1",
     "@testing-library/react": "^12.1.0",
     "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.11",
@@ -26,6 +28,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.1",
     "css-loader": "^3.5.3",
+    "cypress": "^8.5.0",
     "eslint": "^7.0.0",
     "eslint-config-standard-with-typescript": "^16.0.0",
     "eslint-plugin-cypress": "^2.12.1",
