--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "GNU GPL3",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test": "cross-env NODE_ICU_data=node_modules/full-icu jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^3.5.3",
     "cypress": "^8.5.0",
     "eslint": "^7.0.0",
@@ -39,6 +40,7 @@
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^4.1.0",
+    "full-icu": "^1.4.0",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
